유저 로그인관련 완성

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <header>
+        {% block message %}
+
+        {% endblock message %}
         <p>Flask_World</p>
         {% block user %}  
 
