--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,14 @@
 
 {% if user=="login" %}
 <a href = "{{url_for('login')}}">login</a>
+<a href = "{{url_for('signin')}}">Sign in</a>
 {% else %}
 <p>user : {{user}}</p>
-<a href = "{{url_for('logout')}}">logout</a>
+<p><a href = "{{url_for('logout')}}">logout</a></p>
+<p><a href = "{{url_for('users_post', uid = user)}}">나의글 목록보기</a></p>
+<p><a href = "{{url_for('write')}}">글작성하기</a></p>
 {% endif %}
+<p><a href = "{{url_for('post_list')}}">글 목록 보기</a></p>
 {% endblock user %}
 
 {% block contents %}
