--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
     {% endblock message %}
     <header>
-        <a href="{{url_for('index')}}"><p>Flask_World</p></a>
+        <a href="{{url_for('index')}}"><h1>Flask_World</h1></a>
         {% block user %}  
 
         {% endblock user %}  
