2차 완성본(이미지 기능 추가 storage O)

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -8,5 +8,6 @@
 <p>제목: {{post.title}}</p>
 <p>유저: {{post.uid}}</p>
 <p>본문: {{post.contents}}</p>
+<p>이미지 :</p> <img src = "{{photourl}}" width = 450>s
  
 {% endblock contents %}
